[package]
name = "rlua-async"
version = "0.5.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
edition = "2018"
description = "Async support for rlua, via coroutines"
readme = "README.md"
repository = "https://github.com/Ekleog/rlua-async"
license = "MIT OR Apache-2.0"
keywords = ["async", "lua"]
categories = ["asynchronous"]

[badges]
is-it-maintained-issue-resolution = { repository = "Ekleog/rlua-async" }
is-it-maintained-open-issues = { repository = "Ekleog/rlua-async" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures = "0.3.4"
rlua = "0.19.0"
scoped-tls = "1.0.0"

[dev-dependencies]
futures-timer = "3.0.2"
